--- a/GuessMyNationality/Areas/Admin/Views/Shared/_sideMenu.cshtml
+++ b/GuessMyNationality/Areas/Admin/Views/Shared/_sideMenu.cshtml
@@ -3,12 +3,12 @@
     <div class="profile-sidebar">
 
         <div class="profile-userpic">
-            <img src="http://placehold.it/80/38cabe/fff" class="img-responsive" alt="">
+            <img src="/AdminTemplate/Img/ashkan.jpg" class="img-responsive" alt="">
         </div>
 
         <div class="profile-usertitle">
             <div class="profile-usertitle-name">
-                <a class="" style="color:#5f5f5f;text-decoration:none" href="http://psdfa.com">psdfa</a>
+                <a class="" style="color:#5f5f5f;text-decoration:none" href="#">Ashkan</a>
             </div>
             <div class="profile-usertitle-status">
                 <span class="indicator label-success"></span>Online
@@ -28,7 +28,7 @@
 
     <ul class="nav menu">
         <li class="active"><a href="index.html"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Dashboard</a></li>
-        <li><a href="widgets.html"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Games</a></li>
+        <li><a asp-controller="Games" asp-action="Index"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Games</a></li>
         <li class="parent ">
             <a data-toggle="collapse" href="#sub-item-1">
                 <svg class="glyph stroked open folder"><use xlink:href="#stroked-open-folder" /></svg> Game Pictures <span data-toggle="collapse" href="#sub-item-1" class="icon pull-right"><em class="glyphicon glyphicon-s glyphicon-plus"></em></span>
