--- a/GuessMyNationality/Views/Home/Index.cshtml
+++ b/GuessMyNationality/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
 }
 
 <div class="content">
-    <button type="button" class="btn btn-info mb-2">click</button>
+    <button type="button" onclick="StartAnimation()" class="btn btn-info mb-2">click</button>
     <div class="image-box " id="draggable">
-        <img  src="/GamePictures/image.jpeg" alt="image" id="image">
+        <img src="/GamePictures/image.jpeg" alt="image" id="image">
     </div>
 </div>
 
@@ -20,5 +20,5 @@
     <script src="~/js/jquery-3.6.0.min.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
     <script src="~/js/jquery-ui.min.js"></script>
-    <script src="~/js/index.js"></script>
+    <script src="~/js/Views/Home/Game.js"></script>
 }
