add game start button

--- a/GuessMyNationality/Views/Home/Index.cshtml
+++ b/GuessMyNationality/Views/Home/Index.cshtml
@@ -3,8 +3,7 @@
 }
 
 <div class="content">
-    <button type="button" onclick="StartAnimation()" class="btn btn-info mb-2">click</button>
-    @await Component.InvokeAsync(typeof(GuessMyNationality.MVC.ViewComponents.GamePhotoViewComponent)) 
+    <button type="button" onclick="startGame()" class="btn btn-lg btn-info mb-2">Start Game</button>
 </div>
 
 
