--- a/GuessMyNationality/Views/Home/Index.cshtml
+++ b/GuessMyNationality/Views/Home/Index.cshtml
@@ -2,11 +2,14 @@
     ViewData["Title"] = "Home Page";
 }
 
+
+
 <div class="content">
     <button type="button" onclick="startGame()" class="btn btn-lg btn-info mb-2">Start Game</button>
 </div>
 
 
+<div class="alert alert-info instructions">Game play instructions</div>
 
 <div class="box box-top-l" id="div1">Japanese</div>
 <div class="box box-top-r" id="div2">Chinese</div>
