--- a/GuessMyNationality/Views/Home/StartButtonViewComponent.cshtml
+++ b/GuessMyNationality/Views/Home/StartButtonViewComponent.cshtml
@@ -1,1 +1,1 @@
-﻿<button type="button" onclick="startGame()" class="btn btn-lg btn-info mb-2">Start Game</button>
+﻿<button type="button" onclick="startGame()" class="btn btn-lg btn-info mb-2">@(Model==1?"Restart Game":"Start Game")</button>
