--- a/GuessMyNationality/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/GuessMyNationality/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Quay - Dashboard</title>
+    <title>Guess My Nationality - Dashboard</title>
 
     <link href="/AdminTemplate/css/bootstrap.min.css" rel="stylesheet">
     <link href="/AdminTemplate/css/styles.css" rel="stylesheet">
