--- a/GuessMyNationality/Views/Home/ScoresViewComponent.cshtml
+++ b/GuessMyNationality/Views/Home/ScoresViewComponent.cshtml
@@ -1,4 +1,4 @@
 ﻿@model GameViewModel
-<h6>YourScore</h6><span class="badge badge-info">@Model.GameScore</span>
+<h6>YourScore</h6><span id="finalScore" class="badge badge-info">@Model.GameScore</span>
 
 <input type="hidden" value="@Model.GameGuid" id="GameGuid"/>
