--- a/GuessMyNationality/Views/Home/StartButtonViewComponent.cshtml
+++ b/GuessMyNationality/Views/Home/StartButtonViewComponent.cshtml
@@ -1,1 +1,3 @@
-﻿<button type="button" onclick="startGame()" class="btn btn-lg btn-info mb-2">@(Model==1?"Restart Game":"Start Game")</button>
+﻿<div class="content">
+    <button type="button" onclick="startGame()" class="btn btn-lg btn-info mb-2">@(Model==1?"Restart Game":"Start Game")</button>
+</div>
