--- a/GuessMyNationality/wwwroot/css/style.css
+++ b/GuessMyNationality/wwwroot/css/style.css
@@ -58,6 +58,14 @@ button:focus{
     position: absolute;
     bottom: 20px;
 }
+.StartButton {
+    position: absolute;
+    top: 100px;
+}
+.ShowScore {
+    position: absolute;
+    top: 170px;
+}
 .box-top-l {
     top: 0;
     left: 0;
