--- a/GuessMyNationality/Views/Home/Index.cshtml
+++ b/GuessMyNationality/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
     <button id="StartButtonB" type="button" onclick="startGame()" class="btn btn-lg btn-info">StartGame</button>
 </div>
 <div class="ShowScore" >
-    <h3 id="ShowScoreH" class="text-info">You Score</h3>
+    <h3 id="ShowScoreH" class="text-info"></h3>
 </div>
 <div class="content">
 </div>
