--- a/GuessMyNationality/Views/Home/Index.cshtml
+++ b/GuessMyNationality/Views/Home/Index.cshtml
@@ -19,6 +19,8 @@
 <div class="box box-bottom-r" id="Thai">Thai</div>
 <div id="ScoreSection" class="ScoreSection">
 </div>
+<div id="trueCircle" class="dot truecircle"></div>
+<div id="falseCircle" class="dot falsecircle"></div>
 
 @section Scripts{
     <script src="~/js/jquery-3.6.0.min.js"></script>
