Delete Dashbord and logout links

--- a/GuessMyNationality/Areas/Admin/Views/Shared/_sideMenu.cshtml
+++ b/GuessMyNationality/Areas/Admin/Views/Shared/_sideMenu.cshtml
@@ -27,8 +27,8 @@
 
 
     <ul class="nav menu">
-        <li class="active"><a href="index.html"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Dashboard</a></li>
-        <li><a href="javascript:void(0)"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Games</a></li>
+        <li class="active"><a href="javascript:void(0)"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Dashboard</a></li>
+        <li><a asp-controller="Games" asp-action="Index"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Games</a></li>
         <li class="parent ">
             <a data-toggle="collapse" href="#sub-item-1">
                 <svg class="glyph stroked open folder"><use xlink:href="#stroked-open-folder" /></svg> Game Pictures <span data-toggle="collapse" href="#sub-item-1" class="icon pull-right"><em class="glyphicon glyphicon-s glyphicon-plus"></em></span>
@@ -54,7 +54,7 @@
         
 
         <li role="presentation" class="divider"></li>
-        <li><a href="login.html"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Logout</a></li>
+        <li><a href="javascript:void(0)"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Logout</a></li>
     </ul>
 
 </div>
