--- a/GuessMyNationality/Areas/Admin/Views/Pictures/Index.cshtml
+++ b/GuessMyNationality/Areas/Admin/Views/Pictures/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<GuessMyNationality.Domain.Models.GamePicture>
+<link href="~/AdminTemplate/Paging/simplePagination.css" rel="stylesheet" />
 <div class="row">
     <div class="col-md-10">
         <div class="panel panel-default">
@@ -8,7 +9,7 @@
                 <div class="bootstrap-table">
                     <div class="fixed-table-toolbar"></div><div class="fixed-table-container">
                         <div class="fixed-table-header"><table></table></div><div class="fixed-table-body">
-                           <table class="table table-hover">
+                            <table class="table table-hover">
                                 <thead>
                                     <tr>
                                         <th>Picture</th>
@@ -28,20 +29,20 @@
                                                 <td>
                                                     <img class="img-responsive" style="max-width:100px;" src=@(@"\GamePictures\"+item.Name) />
                                                 </td>
-                                            
+
                                                 <td>
                                                     @item.AddDate.ToShortDateString()
                                                 </td>
-                                            
-                                           
+
+
                                                 <td>
                                                     @item.Nationality
                                                 </td>
-                                            
+
                                                 <td>
                                                     @item.IsFamous.ToString()
                                                 </td>
-                                           
+
                                                 <td>
                                                     <button onclick="RemovePic(@item.Id,this)" class="btn btn-danger btn-sm">Remove</button>
                                                 </td>
@@ -63,6 +64,27 @@
     </div>
     <div class="col-md-2"></div>
 </div>
-@section Scripts{ 
+@section Scripts{
     <script src="~/js/PictureIndex.js"></script>
+    <script src="~/AdminTemplate/Paging/jquery.simplePagination.js"></script>
+    <script>
+    $(function () {
+        $("#Paginf").pagination({
+            pages:10 ,
+           cssStyle: 'light-theme',
+            currentPage: 3,
+            nextText: "Next",
+            prevText: "Previous",
+            onPageClick(pageNumber, event) {
+                let url = (new URL(document.location));
+                url.searchParams.set("PageId", pageNumber);
+                window.location = url;
+
+
+
+        }
+        });
+    });
+
+    </script>
 }
