--- a/GuessMyNationality/Areas/Admin/Views/Pictures/Index.cshtml
+++ b/GuessMyNationality/Areas/Admin/Views/Pictures/Index.cshtml
@@ -56,7 +56,7 @@
                                     }
                                 </tbody>
                             </table>
-                        </div><div class="fixed-table-pagination"></div>
+                        </div><div id="Paging" class="fixed-table-pagination"></div>
                     </div>
                 </div><div class="clearfix"></div>
             </div>
@@ -69,7 +69,7 @@
     <script src="~/AdminTemplate/Paging/jquery.simplePagination.js"></script>
     <script>
     $(function () {
-        $("#Paginf").pagination({
+        $("#Paging").pagination({
             pages:10 ,
            cssStyle: 'light-theme',
             currentPage: 3,
