change true false icons and display time

--- a/GuessMyNationality/Views/Home/Index.cshtml
+++ b/GuessMyNationality/Views/Home/Index.cshtml
@@ -19,8 +19,8 @@
 <div class="box box-bottom-r" id="Thai">Thai</div>
 <div id="ScoreSection" class="ScoreSection">
 </div>
-<div id="trueCircle" class="dot truecircle"></div>
-<div id="falseCircle" class="dot falsecircle"></div>
+<div id="trueCircle" class="result resultTrue"><img class="img-responsive img-fluid" src="/GamePictures/True.png" /></div>
+<div id="falseCircle" class="result resultFalse"><img class="img-responsive img-fluid" src="~/GamePictures/False.png"/></div>
 
 @section Scripts{
     <script src="~/js/jquery-3.6.0.min.js"></script>
