--- a/GuessMyNationality/wwwroot/css/style.css
+++ b/GuessMyNationality/wwwroot/css/style.css
@@ -1,10 +1,10 @@
-*{
-   padding: 0;
-   margin: 0;
-   box-sizing: border-box; 
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-body{
+body {
     width: 100vw;
     height: 100vh;
     background-color: #fff;
@@ -17,27 +17,30 @@ body{
     align-items: center;
     justify-content: center;
 }
- 
 
-button{
+
+button {
     outline: none;
-    border: none; 
-}
-button:focus{
-    box-shadow: none !important;
-}
-.image-box{
-    width: 200px;
-    height: 200px; 
-    cursor:grabbing;
-    z-index: 2; 
-}
-.image-box img{
-    width: 100%;
-    height: 100%;
+    border: none;
 }
 
-.box{
+    button:focus {
+        box-shadow: none !important;
+    }
+
+.image-box {
+    width: 200px;
+    height: 200px;
+    cursor: grabbing;
+    z-index: 2;
+}
+
+    .image-box img {
+        width: 100%;
+        height: 100%;
+    }
+
+.box {
     width: 200px;
     height: 200px;
     display: flex;
@@ -50,54 +53,60 @@ button:focus{
     margin: 10px;
     z-index: 0;
 }
+
 .instructions {
     position: absolute;
     top: 0;
 }
+
 .ScoreSection {
     position: absolute;
     bottom: 20px;
 }
+
 .StartButton {
     position: absolute;
     top: 100px;
 }
+
 .ShowScore {
     position: absolute;
     top: 170px;
 }
+
 .box-top-l {
     top: 0;
     left: 0;
 }
-.box-top-r{
+
+.box-top-r {
     top: 0;
     right: 0;
 }
-.box-bottom-l{
+
+.box-bottom-l {
     bottom: 0;
     left: 0;
 }
-.box-bottom-r{
+
+.box-bottom-r {
     bottom: 0;
     right: 0;
 }
-.truecircle {
+.result {
     position: absolute;
-    bottom: 50px;
-    right: 550px;
-    background-color: #54b115;
-}
-.falsecircle {
-    position: absolute;
-    bottom: 50px;
-    left: 550px;
-    background-color:#ff0000;
-}
-.dot {
-    
-    height: 35px;
-    width: 35px;
-    border-radius: 50%;
+    bottom: 150px;
+    height: 100px;
+    width: 100px;
     display: none;
+}
+.resultTrue {
+    right: 450px;
+
+}
+
+.resultFalse {
+
+    left: 450px;
+
 }
