Add CountDown Timer

--- a/GuessMyNationality/Views/Home/GamePictureViewComponent.cshtml
+++ b/GuessMyNationality/Views/Home/GamePictureViewComponent.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PictureToGameViewModel
 <div class="content">
     <div class="image-box " id="draggable">
-        <img class="img-thumbnail rounded" nationality=@Model.Nationality name="Image" src=@Model.Path alt="image" id=@Model.Guid>
+        <img nationality=@Model.Nationality name="Image" src=@Model.Path alt="image" id=@Model.Guid>
     </div>
 </div>
