--- a/GuessMyNationality/Views/Home/Index.cshtml
+++ b/GuessMyNationality/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 <div class="StartButton">
-    <button id="StartButtonB" type="button" onclick="startGame()" class="btn btn-lg btn-info">StartGame</button>
+    <button id="StartButtonB" type="button" onclick="CountDown()" class="btn btn-lg btn-info">StartGame</button>
 </div>
 <div class="ShowScore" >
     <h3 id="ShowScoreH" class="text-info"></h3>
