Design Dashbord and  controller methods

--- a/GuessMyNationality/Areas/Admin/Views/Shared/_sideMenu.cshtml
+++ b/GuessMyNationality/Areas/Admin/Views/Shared/_sideMenu.cshtml
@@ -27,7 +27,7 @@
 
 
     <ul class="nav menu">
-        <li class="active"><a href="javascript:void(0)"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Dashboard</a></li>
+        <li  class="active"><a asp-controller="Home" asp-action="Index"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Dashboard</a></li>
         <li><a asp-controller="Games" asp-action="Index"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Games</a></li>
         <li class="parent ">
             <a data-toggle="collapse" href="#sub-item-1">
