--- a/GuessMyNationality/Areas/Admin/Views/Home/Index.cshtml
+++ b/GuessMyNationality/Areas/Admin/Views/Home/Index.cshtml
@@ -1,6 +1,39 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-<h1>Welcome</h1>
+﻿@model DashboardViewModel
+<div class="row">
+    <div class="col-xs-6 col-md-3 col-lg-3 no-padding">
+        <div class="panel panel-teal panel-widget border-right">
+            <div class="row no-padding">
+                <svg class="glyph stroked laptop computer and mobile"><use xlink:href="#stroked-laptop-computer-and-mobile" /></svg>
+                <div class="large">@Model.TotalGames</div>
+                <div class="text-muted">Total Games</div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-6 col-md-3 col-lg-3 no-padding">
+        <div class="panel panel-blue panel-widget border-right">
+            <div class="row no-padding">
+                <svg class="glyph stroked empty-message"><use xlink:href="#stroked-empty-message"></use></svg>
+                <div class="large">@Model.TopScore</div>
+                <div class="text-muted">Top Score</div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-6 col-md-3 col-lg-3 no-padding">
+        <div class="panel panel-orange panel-widget border-right">
+            <div class="row no-padding">
+                <svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg>
+                <div class="large">@Model.TotalUsers</div>
+                <div class="text-muted">Total Users</div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-6 col-md-3 col-lg-3 no-padding">
+        <div class="panel panel-red panel-widget ">
+            <div class="row no-padding">
+                <svg class="glyph stroked app-window-with-content"><use xlink:href="#stroked-app-window-with-content"></use></svg>
+                <div class="large">----</div>
+                <div class="text-muted">Page Views</div>
+            </div>
+        </div>
+    </div>
+</div>
