--- a/GuessMyNationality/Areas/Admin/Views/Home/Index.cshtml
+++ b/GuessMyNationality/Areas/Admin/Views/Home/Index.cshtml
@@ -37,3 +37,6 @@
         </div>
     </div>
 </div>
+@section Scripts{
+    <script src="~/js/Areas/Admin/Views/Home/AdminHomeIndex.js"></script>
+}
