SideMenu auto collapse

--- a/GuessMyNationality/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/GuessMyNationality/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -33,90 +33,90 @@
                 </button>
                 <a class="navbar-brand" href="#">GuessMyNationality</a>
                 @*<ul class="nav navbar-top-links navbar-right">
-                    <li class="dropdown">
-                        <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                            <i class="glyphicon glyphicon-envelope"></i><span class="label label-danger">15</span>
-                        </a>
-                        <ul class="dropdown-menu dropdown-messages">
-                            <li>
-                                <div class="dropdown-messages-box">
-                                    <a href="profile.html" class="pull-left">
-                                        <img alt="image" class="img-circle" src="http://placehold.it/40/ccc/fff">
-                                    </a>
-                                    <div class="message-body">
-                                        <small class="pull-right">3 mins ago</small>
-                                        <a href="#"><strong>John Doe</strong> commented on <strong>your photo</strong>.</a>
-                                        <br />
-                                        <small class="text-muted">1:24 pm - 25/03/2015</small>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
+                                <i class="glyphicon glyphicon-envelope"></i><span class="label label-danger">15</span>
+                            </a>
+                            <ul class="dropdown-menu dropdown-messages">
+                                <li>
+                                    <div class="dropdown-messages-box">
+                                        <a href="profile.html" class="pull-left">
+                                            <img alt="image" class="img-circle" src="http://placehold.it/40/ccc/fff">
+                                        </a>
+                                        <div class="message-body">
+                                            <small class="pull-right">3 mins ago</small>
+                                            <a href="#"><strong>John Doe</strong> commented on <strong>your photo</strong>.</a>
+                                            <br />
+                                            <small class="text-muted">1:24 pm - 25/03/2015</small>
+                                        </div>
                                     </div>
-                                </div>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <div class="dropdown-messages-box">
-                                    <a href="profile.html" class="pull-left">
-                                        <img alt="image" class="img-circle" src="http://placehold.it/40/ccc/fff">
-                                    </a>
-                                    <div class="message-body">
-                                        <small class="pull-right">1 hour ago</small>
-                                        <a href="#">New message from <strong>Jane Doe</strong>.</a>
-                                        <br />
-                                        <small class="text-muted">12:27 pm - 25/03/2015</small>
+                                </li>
+                                <li class="divider"></li>
+                                <li>
+                                    <div class="dropdown-messages-box">
+                                        <a href="profile.html" class="pull-left">
+                                            <img alt="image" class="img-circle" src="http://placehold.it/40/ccc/fff">
+                                        </a>
+                                        <div class="message-body">
+                                            <small class="pull-right">1 hour ago</small>
+                                            <a href="#">New message from <strong>Jane Doe</strong>.</a>
+                                            <br />
+                                            <small class="text-muted">12:27 pm - 25/03/2015</small>
+                                        </div>
                                     </div>
-                                </div>
-                            </li>
-                            <li class="divider"></li>
+                                </li>
+                                <li class="divider"></li>
 
-                            <li>
-                                <div class="all-button">
+                                <li>
+                                    <div class="all-button">
+                                        <a href="#">
+                                            <em class="glyphicon glyphicon-inbox"></em> <strong>All Messages</strong>
+                                        </a>
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
+                                <i class="glyphicon glyphicon-bell"></i><span class="label label-info">5</span>
+                            </a>
+                            <ul class="dropdown-menu dropdown-alerts">
+                                <li>
                                     <a href="#">
-                                        <em class="glyphicon glyphicon-inbox"></em> <strong>All Messages</strong>
+                                        <div>
+                                            <em class="glyphicon glyphicon-envelope"></em> 1 New Message
+                                            <span class="pull-right text-muted small">3 mins ago</span>
+                                        </div>
                                     </a>
-                                </div>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                            <i class="glyphicon glyphicon-bell"></i><span class="label label-info">5</span>
-                        </a>
-                        <ul class="dropdown-menu dropdown-alerts">
-                            <li>
-                                <a href="#">
-                                    <div>
-                                        <em class="glyphicon glyphicon-envelope"></em> 1 New Message
-                                        <span class="pull-right text-muted small">3 mins ago</span>
-                                    </div>
-                                </a>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <a href="#">
-                                    <div>
-                                        <em class="glyphicon glyphicon-heart"></em> 12 New Likes
-                                        <span class="pull-right text-muted small">4 mins ago</span>
-                                    </div>
-                                </a>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <a href="#">
-                                    <div>
-                                        <em class="glyphicon glyphicon-user"></em> 5 New Followers
-                                        <span class="pull-right text-muted small">4 mins ago</span>
-                                    </div>
-                                </a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>*@
+                                </li>
+                                <li class="divider"></li>
+                                <li>
+                                    <a href="#">
+                                        <div>
+                                            <em class="glyphicon glyphicon-heart"></em> 12 New Likes
+                                            <span class="pull-right text-muted small">4 mins ago</span>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="divider"></li>
+                                <li>
+                                    <a href="#">
+                                        <div>
+                                            <em class="glyphicon glyphicon-user"></em> 5 New Followers
+                                            <span class="pull-right text-muted small">4 mins ago</span>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>*@
             </div>
 
         </div><!-- /.container-fluid -->
     </nav>
 
-  <!--/.sidebar-->
-    <partial name="_sideMenu"/>
+    <!--/.sidebar-->
+    <partial name="_sideMenu" />
 
     <div class="col-sm-9 col-sm-offset-3 col-lg-9 col-lg-offset-3 main">
         <div class="row">
@@ -139,13 +139,14 @@
     <script src="/AdminTemplate/js/jquery-1.11.1.min.js"></script>
     <script src="/AdminTemplate/js/bootstrap.min.js"></script>
     @*<script src="/AdminTemplate/js/chart.min.js"></script>
-    <script src="/AdminTemplate/js/chart-data.js"></script>
-    <script src="/AdminTemplate/js/easypiechart.js"></script>
-    <script src="/AdminTemplate/js/easypiechart-data.js"></script>*@
+        <script src="/AdminTemplate/js/chart-data.js"></script>
+        <script src="/AdminTemplate/js/easypiechart.js"></script>
+        <script src="/AdminTemplate/js/easypiechart-data.js"></script>*@
     <script src="/AdminTemplate/js/bootstrap-datepicker.js"></script>
     <script src="/AdminTemplate/js/custom.js"></script>
+    <script src="~/js/Areas/Admin/Views/SiteJs.js"></script>
 
-    @RenderSection("Scripts",false)
+    @RenderSection("Scripts", false)
 </body>
 
 </html>
