--- a/GuessMyNationality/Areas/Admin/Views/Shared/_sideMenu.cshtml
+++ b/GuessMyNationality/Areas/Admin/Views/Shared/_sideMenu.cshtml
@@ -25,13 +25,13 @@
         </div>
     </form>
 
-    @{ 
+    @{
         var controllerName = this.ViewContext.RouteData.Values["controller"].ToString();
         var actionName = ViewContext.RouteData.Values["action"].ToString();
-    } 
+    }
     <ul class="nav menu">
-        <li  class=@((controllerName=="Home"&&actionName=="Index")?"active":"")><a asp-controller="Home" asp-action="Index"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Dashboard</a></li>
-        <li class=@((controllerName=="Games"&&actionName=="Index")?"active":"") ><a asp-controller="Games" asp-action="Index"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Games</a></li>
+        <li class=@((controllerName=="Home"&&actionName=="Index")?"active":"")><a asp-controller="Home" asp-action="Index"><svg class="glyph stroked dashboard-dial"><use xlink:href="#stroked-dashboard-dial"></use></svg> Dashboard</a></li>
+        <li class=@((controllerName=="Games"&&actionName=="Index")?"active":"")><a asp-controller="Games" asp-action="Index"><svg class="glyph stroked calendar"><use xlink:href="#stroked-calendar"></use></svg> Games</a></li>
         <li class="parent ">
             <a data-toggle="collapse" href="#sub-item-1">
                 <svg class="glyph stroked open folder"><use xlink:href="#stroked-open-folder" /></svg> Game Pictures <span data-toggle="collapse" href="#sub-item-1" class="icon pull-right"><em class="glyphicon glyphicon-s glyphicon-plus"></em></span>
@@ -39,19 +39,19 @@
 
             <ul class="children collapse" id="sub-item-1">
                 <li>
-                    <a class="" asp-controller="Pictures" asp-action="Index">
+                    <a class=@((controllerName=="Pictures"&&actionName=="Index")?"active":"") asp-controller="Pictures" asp-action="Index">
                         <span class="glyphicon glyphicon-share-alt"></span> List Of Pictures
                     </a>
                 </li>
                 <li>
-                    <a class="" asp-controller="Pictures" asp-action="AddPicture">
+                    <a class=@((controllerName=="Pictures"&&actionName=="AddPicture")?"active":"") asp-controller="Pictures" asp-action="AddPicture">
                         <span class="glyphicon glyphicon-share-alt"></span> Add Pictutre
                     </a>
                 </li>
-           
+
             </ul>
         </li>
-        
+
 
         <li role="presentation" class="divider"></li>
         <li><a href="javascript:void(0)"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Logout</a></li>
